--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-{ "homepage": "https://aishwarode17.github.io/Fire-textutility",
-
-  "name": "fire", 
+{
+  "homepage": "https://aishwarode17.github.io/Fire-textutility",
+  "name": "fire",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,8 +21,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
-
   "eslintConfig": {
     "extends": [
       "react-app",
